deploy/k8s/goddess/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moon-web-goddess
  namespace: moon
  labels:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: goddess
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: moon-web
      app.kubernetes.io/component: goddess
  template:
    metadata:
      labels:
        app.kubernetes.io/name: moon-web
        app.kubernetes.io/component: goddess
    spec:
      containers:
        - name: web
          image: ghcr.io/aide-family/moon-web/goddess:v0.0.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
