deploy/k8s/goddess/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moon-web-goddess
  namespace: moon
  labels:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: goddess
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: moon-web
    app.kubernetes.io/component: goddess
  ports:
    - name: http
      port: 80
      targetPort: http
